networking_vpc.tf
resource "aws_vpc" "gastroman_vpc" {
  cidr_block           = var.vpc_cidr_block
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    name = "gastroman-vpc_${local.environment}"
    env  = "${local.environment}"
  }
}
